Task-12/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-microsevice-v1
spec:
  replicas: 3 
  strategy:
    type: RollingUp
  selector:
    matchLabels:
      app: dp-microsevice
  template:
    metadata:
      labels:
        app: dp-microsevice
    spec:
      containers:
      - name: dp-microsevice-v1
        image: damirnr/microsevice_v1
        ports:
        - containerPort: 8000
