Task-12/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-microsevice-v1-lb
spec:
  selector:
    env: microsevice-rs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
