Task-12/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microservice
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-microsevice
            port: 
              number: 80
